Updates to journey
adding Axure link

--- a/app/views/citizen-truelayer/capital-assets-other.html
+++ b/app/views/citizen-truelayer/capital-assets-other.html
@@ -22,12 +22,23 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have any savings?
+          Do you have anything that can pay towards legal costs?
         </h1>
 
-        <p class="govuk-body">For example, cash savings, ISAs, building society or Post Office accounts.</p>
+        <p class="govuk-body">Select ‘Yes’ if you have any of the following.</p>
 
-        <form class="form" action="has-other-capital" method="get">
+        <ul>
+          <li>second property or holiday home</li>
+          <li>stocks, shares, PEPs, trusts or other investments</li>
+          <li>jewellery, art and antiques with a value over £500</li>
+          <li>classic car or caravan</li>
+          <li>National Savings certificates or Premium Bonds</li>
+          <li>life assurance or endowment policies not linked to a mortgage</li>
+          <li>money or assets from the estate of a person who has died</li>
+        </ul>
+
+
+
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -45,10 +56,9 @@
               </div>
             </fieldset>
           </div>
+        <br>
+<a class="govuk-c-button govuk-c-button" href="means-result" role="button">Continue</a>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
-
-        </form>
 
       </div>
     </div>
