--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -127,11 +127,11 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Mortgage, rent and board</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£248.50</td>
+                  <th class="govuk-c-table__header" scope="row">Mortgage, rent or board</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1048.50</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- Jess Jones 0735454 - £248.50</td>
+                  <td class="govuk-c-table__cell" scope="row">- Jess Jones 01234567 - £1048.50</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u>
