--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -419,24 +419,18 @@
           Outgoings
         </h2>
 
-        <h3 class="govuk-heading-m">
-          Tell us about your outgoings over the last 30 days
-        </h3>
-
-        <p class="govuk-body">We will now list all payments out of your account. Please mark which of these payments fall into the following categories.</p>
+       
+        <p class="govuk-body">Tell us what you have paid out of your bank accounts in the last 30 days.</p>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
+                <span class="task-list-section-number">1. </span>Mortgage, rent or board
             </h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add payments for mortgage, rent, board or lodging, and council tax bills
-            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                    Jess Jones 0735454 - £248.50
+                    Jess Jones 01234567 - £1048.50
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
