--- a/app/views/citizen-truelayer/obmultiple.html
+++ b/app/views/citizen-truelayer/obmultiple.html
@@ -45,7 +45,7 @@
           <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
-        <p class="govuk-body"><a href="http://www.bbc.co.uk">Income route 2 - statement view</a></p>
+        <p class="govuk-body"><a href="https://ofe3qu.axshare.com/income_statement_v_.html">Route 2 - statement view</a></p>
 
       </div>
     </div>
