--- a/app/views/citizen-truelayer/select-housing.html
+++ b/app/views/citizen-truelayer/select-housing.html
@@ -138,7 +138,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select mortgage, rent and board payments
+              Select mortgage, rent or board payments
         </h2>
 
         <p class="govuk-body">We have listed items from your bank statement by the highest outgoing payment to help you.</p>
@@ -155,19 +155,19 @@
           </thead>
           <tbody class="govuk-c-table__body">
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">Cash RB SCOT Oct21</td>
+              <td class="govuk-c-table__cell">Jess Jones 01234567</td>
               <td class="govuk-c-table__cell">21 OCT 2017</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1048.50</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="outgoings"></label>
                 </div>
               </td>
             </tr>
-              <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">Jess Jones 0735454</td>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Cash RB SCOT Oct21</td>
               <td class="govuk-c-table__cell">21 OCT 2017</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£248.50</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="outgoings"></label>
