Updates before testing
-- pre-start
-- cash in hand

--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -430,7 +430,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                    Jess Jones 01234567 - £1048.50
+                    Jess Jones RENT 01234567 - £1048.50
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
