--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -131,7 +131,7 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1048.50</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- Jess Jones 01234567 - £1048.50</td>
+                  <td class="govuk-c-table__cell" scope="row">- Jess Jones RENT 01234567 - £1048.50</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u>
