--- a/app/views/citizen-truelayer/other-income.html
+++ b/app/views/citizen-truelayer/other-income.html
@@ -22,7 +22,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Do you receive any income paid in cash?
+              Do you have any income that's not visible on your bank statement?
         </h2>
 
         <form action="/citizen-truelayer/cash" method="get">
@@ -30,7 +30,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <p class="govuk-body">For example, payment for a temporary or casual job.</p>
+                <p class="govuk-body">For example, cash in hand for a temporary or casual job.</p>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="cash-1" name="cash" type="radio" value="yes" required>
