--- a/app/views/citizen-truelayer/pre-start.html
+++ b/app/views/citizen-truelayer/pre-start.html
@@ -24,20 +24,23 @@
 
           <form class="form" action="pre-start-check" method="get">
 
+          <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="route2" name="route" type="radio" value="route2">
+                  <label class="govuk-c-label govuk-c-radios__label" for="route2">
+                <strong>1. Alpha+</strong> <br>(user chooses single category > single transaction)
+              </label>
+                </div>
+
+
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="route1">
-                1 - ross
+                <strong>2. Statement+</strong> <br>(user chooses multiple transactions > single category)
               </label>
-                </div>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="route2" name="route" type="radio" value="route2">
-                  <label class="govuk-c-label govuk-c-radios__label" for="route2">
-                2 - stay in the prototype
-              </label>
-                </div>
+            </div>
+
               </fieldset>
             </div>
 
