--- a/app/views/citizen-truelayer/select-housing.html
+++ b/app/views/citizen-truelayer/select-housing.html
@@ -155,7 +155,7 @@
           </thead>
           <tbody class="govuk-c-table__body">
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">Jess Jones 01234567</td>
+              <td class="govuk-c-table__cell">Jess Jones RENT 01234567</td>
               <td class="govuk-c-table__cell">21 OCT 2017</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1048.50</td>
               <td class="govuk-c-table__cell">
