--- a/app/views/citizen-truelayer/bank-success.html
+++ b/app/views/citizen-truelayer/bank-success.html
@@ -24,7 +24,9 @@
             You have successfully shared your account information
           </h2>
 
-          <p class="govuk-body">We have downloaded 3 months of your transaction history. You can use this to tell us more about your financial situation.</p>
+          <p class="govuk-body">We have downloaded 3 months of your transaction history.</p>
+
+          <p class="govuk-body">We will use your statement from the last 30 days so you can tell us more about your financial situation.</p>
 
           </br>
           <h2 class="govuk-heading-m">
