--- a/app/views/citizen-truelayer/bank-success.html
+++ b/app/views/citizen-truelayer/bank-success.html
@@ -26,7 +26,7 @@
 
           <p class="govuk-body">We have downloaded 3 months of your transaction history.</p>
 
-          <p class="govuk-body">We will use your statement from the last 30 days so you can tell us more about your financial situation.</p>
+          <p class="govuk-body">We will show your statement from the last 30 days so you can tell us more about your financial situation.</p>
 
           </br>
           <h2 class="govuk-heading-m">
