Connect Axure prototype
Hook up prototpe for round 2

--- a/app/views/citizen-truelayer/pre-start.html
+++ b/app/views/citizen-truelayer/pre-start.html
@@ -26,20 +26,32 @@
 
           <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="route2" name="route" type="radio" value="route2">
-                  <label class="govuk-c-label govuk-c-radios__label" for="route2">
-                <strong>1. Alpha+</strong> <br>(user chooses single category > single transaction)
+                  <label class="hidden" for="route2">
+                <strong>1. Alpha+</strong> <br>(single category > single transaction)<br>
+                citizen-truelayer/identify-income
               </label>
                 </div>
 
+            <div class="govuk-c-radios">
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
+                  <label class="hidden" for="route1">
+                <strong>2. Statement+</strong> <br>(multiple transactions > single category)<br>
+                https://ofe3qu.axshare.com/income_statement_v_.html
+              </label>
+            </div>
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="route1">
-                <strong>2. Statement+</strong> <br>(user chooses multiple transactions > single category)
+                <strong>Round 2 testing - 31/10/18</strong> <br>(narrow categories > multiple selections)
               </label>
             </div>
+
+
 
               </fieldset>
             </div>
