--- a/app/views/citizen-truelayer/pre-start.html
+++ b/app/views/citizen-truelayer/pre-start.html
@@ -46,12 +46,20 @@
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="route1">
+                  <label class="hidden" for="route1">
                 <strong>Round 2 testing - 31/10/18</strong> <br>(narrow categories > multiple selections)
               </label>
             </div>
 
 
+            <div class="govuk-c-radios">
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="route1">
+                <strong>Round 3 testing - 14/11/18</strong> <br>(auto selection)
+              </label>
+            </div>
 
               </fieldset>
             </div>
