Minor updates for testing

--- a/app/views/citizen-truelayer/capital-assets-other.html
+++ b/app/views/citizen-truelayer/capital-assets-other.html
@@ -22,16 +22,16 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have anything that can pay towards legal costs?
+          Do you own any of the following items?
         </h1>
 
-        <p class="govuk-body">Select ‘Yes’ if you have any of the following.</p>
+        <p class="govuk-body">Select ‘Yes’ if you have:</p>
 
         <ul>
-          <li>second property or holiday home</li>
+          <li>a second property or holiday home</li>
           <li>stocks, shares, PEPs, trusts or other investments</li>
           <li>jewellery, art and antiques with a value over £500</li>
-          <li>classic car or caravan</li>
+          <li>a classic car or caravan</li>
           <li>National Savings certificates or Premium Bonds</li>
           <li>life assurance or endowment policies not linked to a mortgage</li>
           <li>money or assets from the estate of a person who has died</li>
