--- a/app/views/citizen-truelayer/obbank.html
+++ b/app/views/citizen-truelayer/obbank.html
@@ -90,8 +90,8 @@
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
-                  I agree for the Legal Aid Agency and my solicitor to check 3 months of bank transactions
-                      using temporary access to my online banking
+                  <strong>I agree for the Legal Aid Agency and my solicitor to download and check 3 months of bank transactions
+                    </strong>
                 </label>
               </div>
 
