More testing changes

--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -27,12 +27,12 @@
         <br>
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#005ea5">
           <br>
-          <div class="govuk-c-panel__body">you will have to pay</div><br>
+          <div class="govuk-c-panel__body">you will be eligible for</div><br>
           <h2 class="govuk-c-panel__title">
-            8% of the legal costs
+            £5,000 of legal representation
           </h2>
           <div class="govuk-c-panel__body">
-            this is<br> <strong>£87.15 a month</strong><br> until the final court hearing
+           you will have to contribute <br><strong>£87.15 a month</strong><br> until the final court hearing
           </div>
         </div>
 
