--- a/app/views/citizen-truelayer/submit-means.html
+++ b/app/views/citizen-truelayer/submit-means.html
@@ -30,7 +30,9 @@
         <p class="govuk-body">
           Name: <strong>John Doe</strong><br> Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
 
+        <h2><a href="">Save a summary of your answers (PDF, 167Kb)</a></h2>
 
+        <br>
         <h2>What happens next</h2>
         <br>
 
