--- a/app/views/citizen-truelayer/pre-start.html
+++ b/app/views/citizen-truelayer/pre-start.html
@@ -25,20 +25,14 @@
           <form class="form" action="pre-start-check" method="get">
 
           <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="route2" name="route" type="radio" value="route2">
-                  <label class="hidden" for="route2">
-                <strong>1. Alpha+</strong> <br>(single category > single transaction)<br>
-                citizen-truelayer/identify-income
+                  <label for="route2">
+                <strong>Round 1 - 17/10/18 - Alpha+</strong> <br><a href="https://laa-atp-express-evidence-proto.herokuapp.com/citizen-truelayer/identify-income">(single category > single transaction)</a><br>
               </label>
                 </div>
 
-            <div class="govuk-c-radios">
-              <fieldset class="govuk-c-fieldset">
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
-                  <label class="hidden" for="route1">
-                <strong>2. Statement+</strong> <br>(multiple transactions > single category)<br>
-                https://ofe3qu.axshare.com/income_statement_v_.html
+            <div class="govuk-c-radios__item">
+                  <label>
+                <strong>Round 1 - 17/10/18 Statement+</strong> <br><a href="https://ofe3qu.axshare.com/income_statement_v_.html">(multiple transactions > single category)</a><br>
               </label>
             </div>
 
@@ -46,9 +40,8 @@
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="route1" name="route" type="radio" value="route1" required>
-                  <label class="hidden" for="route1">
-                <strong>Round 2 testing - 31/10/18</strong> <br>(narrow categories > multiple selections)<br>
-                https://q1ovm4.axshare.com/#c=2
+                  <label for="route1">
+                <strong>Round 2 testing - 31/10/18</strong> <br><a href="https://q1ovm4.axshare.com/#c=2">(narrow categories > multiple selections)</a><br>
               </label>
             </div>
 
