--- a/app/views/citizen-truelayer/property-amount.html
+++ b/app/views/citizen-truelayer/property-amount.html
@@ -22,12 +22,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          How much is your property worth?
+          How much is your home worth?
         </h1>
         <form class="form" action="mortgage-amount" method="post">
 
+          <p class="govuk-body">You can use property websites to find the estimated value.</p>
+
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="property-amount">
-            <label class="govuk-c-label">Enter the estimated value of your property</label>
+            <label class="govuk-c-label">Enter the estimated value of your home</label>
 
             </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="property-amount" name="property-amount" placeholder="0.00" type="number">
