--- a/app/views/citizen-truelayer/property.html
+++ b/app/views/citizen-truelayer/property.html
@@ -22,7 +22,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you own your home, either outright or with a mortgage?
+          Do you own the home that you live in?
         </h1>
 
         <form class="form" action="ownsproperty" method="get">
@@ -32,7 +32,16 @@
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="ownsproperty-1" name="ownsproperty" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="ownsproperty-1">
-                Yes
+                Yes, with a mortgage or loan
+              </label>
+              </div>
+
+            <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="ownsproperty-1" name="ownsproperty" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="ownsproperty-1">
+                Yes, owned outright
               </label>
               </div>
               <div class="govuk-c-radios__item">
